<resources>
    <string name="app_name">MyNetwork</string>
    <string name="titleofActivity">MyNetwork</string>
    <string name="Login">Login</string>
    <string name="emailOfUser">Email ID</string>
    <string name="passwordForLogin">Password</string>
    <string name="EmailId">Enter email id</string>
    <string name="hintForUser"><u>Not Registered? Click Here to Register</u></string>
    <string name="register">Submit</string>
    <string name="SelectCity">Select City</string>
    <string name="username">NickName</string>
    <string name="year">Year of Joining</string>
    <string name="Cityname">City Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SetCity">Set</string>
    <string name="cancelSelection">Cancel</string>
    <string name="Register">Register!</string>
    <string name="title_activity_maps1">Map</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="listview">List View</string>
    <string name="mapview">Map View</string>
    <string name="Chat">Logout</string>
    <string name="filter">Filter</string>
    <string name="clearFilter">Clear</string>
    <string name="refresh">Refresh List</string>
    <string name="SendButton">Send</string>
    <string name="loadMore">Load More</string>
    <string name="hintForMessage">Enter your message here</string>
</resources>
