<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.giridhar.mynetwork.RegisterUser">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:nextFocusRight="@+id/editText4"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/editText3"
        android:layout_marginEnd="151dp"
        android:ems="10"
        android:hint="@string/passwordForLogin"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:nextFocusForward="@+id/editText5"/>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText3"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="71dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/emailOfUser"
        android:imeOptions="actionNext"
        android:nextFocusRight="@+id/editText6"/>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText4"
        android:layout_alignTop="@+id/editText5"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/year"
        android:imeOptions="actionNext"
        android:nextFocusForward="@+id/editText7"/>

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Cityname"
        android:layout_below="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:imeOptions="actionDone" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:layout_below="@+id/citySet"
        android:layout_alignStart="@+id/editText7"
        android:nextFocusForward="@+id/spinner2"/>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinner"
        android:layout_alignStart="@+id/editText6"
        android:nextFocusForward="@+id/registerUser"/>


    <Button
        android:id="@+id/registerUser"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/spinner2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/citySet"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/SelectCity"
        android:layout_alignTop="@+id/editText7"
        android:layout_alignStart="@+id/spinner2"
        android:nextFocusForward="@+id/spinner"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:text="@string/Register"
        android:textSize="32sp"/>
</RelativeLayout>
