<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.giridhar.mynetwork.LoginActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/titleofActivity"
        android:fontFamily="serif-monospace"
        android:textSize="42sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailOfUser"
        android:textSize="32sp"
        android:layout_alignTop="@+id/editText"
        android:layout_toStartOf="@+id/textView4" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="98dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/editText"
        android:layout_marginTop="104dp"
        android:text="@string/passwordForLogin"
        android:textSize="32sp"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/editText"
        android:ems="10"
       android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="41dp"
        android:text="@string/Login"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/hintForUser"
        android:textSize="32sp"
        android:clickable="true"/>
</RelativeLayout>
