<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.giridhar.mynetwork.ListViewFragment">


    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginStart="28dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinner3"
        android:layout_toEndOf="@+id/spinner3"
        android:layout_marginStart="43dp" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="number"
        android:layout_below="@+id/spinner3"
        android:layout_alignStart="@+id/spinner3" />



    <Button
        android:id="@+id/button4"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:text="@string/filter"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/spinner3"
        android:layout_toEndOf="@+id/editText8"
        android:layout_marginStart="21dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:text="@string/clearFilter"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_toEndOf="@+id/button4"
        android:layout_marginStart="39dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toStartOf="@+id/button4"
        android:layout_below="@+id/editText8"
        android:layout_alignParentEnd="true"
        android:id="@+id/relativeLayout">

    </RelativeLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText8" />



</RelativeLayout>
